2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added PhotoService

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/Application.cs, src/TransferStatusArgs.cs:
	  Events

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added PhotoService to the project

2007-06-29  Scott Reeves <sreeves@novell.com> 

	* src/TrayPopupWindow.cs: Add initial popup widow

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* src/TargetService.cs: Stubbed out a ProgressBar and ProgressLabel. 
	  Commented-out the handlers.

2007-06-29  Scott Reeves <sreeves@novell.com> 

	* src/Application.cs, src/Makefile.am: add start of popup status
	  message. Patch from Travis Hansen

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/Makefile.am, src/TransferStatusArgs.cs,
	  giver.mdp: Added TransferStatusArgs

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: ReadOnly file transfers
	* src/RequestHandler.cs: Fixed the readonly file stuff
	* configure.ac: Bumped the version

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/RequestHandler.cs: Fixed up the root folder transfer conflicter
	  thingy

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/Application.cs, src/Makefile.am: debug

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, data/images/gravatar.png: Added gravatar.png

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs: polished the preferences
	* src/Application.cs: fixed hiding prefs dialog
	* src/Makefile.am: Added gravatar image to exe
	* giver.mdp: removed glade
	* configure.ac, data/glade, data/glade/giver-prefs.glade,
	  data/glade/Makefile.am, data/glade/gravatar.gif: removed glade
	  (sorry Scott)
	* data/images/Makefile.am, data/Makefile.am: Added gravatar image

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/SendingHandler.cs, src/RequestHandler.cs,